--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ a {
 
 #container {
 	max-width: 940px;
-	margin: 0 auto;
+	margin: 20px auto;
 }
 
 img {
@@ -56,8 +56,19 @@ footer {
 	width: 100%;
 	height: 100%;
 	background: rgba(0,0,0,.7);
+	text-align: center;
 }
-
+.lightbox p {
+	font-family: Helvetica, sans-serif;
+	font-size: 12px;
+	text-align: right;
+	margin-right: 20px;
+	color: #ccc;
+}
 .lightbox img {
-	max-width: 940px;
+	max-width: 850px;
+	margin-bottom: 30px;
+	box-shadow:0 0 25px #111;
+	-webkit-box-shadow:0 0 25px #111;
+	-moz-box-shadow:0 0 25px #111;
 }
